--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
     
-#    root /var/www/html/public;
-    root /var/www/html;
+    root /var/www/html/public;
+    # root /var/www/html;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
